--- a/agenda2.0/assets/style/templatelogin.css
+++ b/agenda2.0/assets/style/templatelogin.css
@@ -1,14 +1,15 @@
 body{
+    font-family: arial;
     display: flex;
     justify-content: space-around;
 }
 
 form {
+    margin-top: 50px;
     background-color: #BEBEBE;
     border: 3px solid #f1f1f1;
     border-radius: 10px;
     width: 450px;
-
 }
 input[type=text], input[type=password] {
     width: 100%;
@@ -18,17 +19,6 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-}
-.entrarbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: green;
-    width: 100%;
-}
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
 }
 
 .imgcontainer{
@@ -40,18 +30,30 @@ img.avatar {
     height: 150px;
 }
 .container {
-    padding: 16px;
-}
-.container a{
-    width: 300px;
-    height: 30px;
-    text-decoration: none;
-    border: 1px solid #fff;
-}
 
-span.psw {
-    float: right;
-    padding-top: 16px;
+    padding: 26px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.container button{
+    width: 100px;
+    height: 40px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;  
+    border-radius: 5px;
+}
+.container button:hover{
+     font-size: 15px;
+     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+.btnEntrar{
+    background-color: green;
+}
+.btnLimpar{
+    background-color: red;
 }
 
 @media screen and (max-width: 300px) {
